# microRNA-dementia-risk-prediction

./: .gitignore  01_Dataset.ipynb  02_Z_Scores.ipynb  README.md  requirements.txt
api/: app.py
config/: config_sample.ini
docker/: Dockerfile
mirna_risk_pred/: LICENSE  README.md  pyproject.toml
mirna_risk_pred/mirna_risk_pred/: feature_engineering.py  loaders.py  train_eval.py  training_pipeline.py  utils.py  visualization.py
mirna_risk_pred/mirna_risk_pred.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: 01_Dataset.ipynb  02_Z_Scores.ipynb  03_PCA.ipynb
scripts/: main.py  run_pipeline.py
src/config/: __init__.py
src/data/: feature_engineering.py  loaders.py
src/models/: supervised_pca.py
