[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mirna-risk-pred"
version = "0.1.0a1"
description = "MicroRNA based dementia risk prediction."
authors = [
    {name = "Sudarshan Pant", email = "sudarshan.pant@gmail.com"},
]
license = {text = "MIT License"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]



dependencies = [
    "tqdm",
    "diskcache", 
    "plotly",
    "requests",
    "tabulate",
    "matplotlib",
    "pandas"
] 

[tool.setuptools.packages.find]
where = ["."]
